[project]
name = "agent-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.6",
]
